# ai-brain-memory

./: .env.example  .gitignore  CHANGELOG.md  COMMIT_GUIDE.md  PROMPT_TEMPLATES_QUICKSTART.md  README.md  main.py  main_enhanced.py  pyproject.toml  requirements.txt
ai_brain/: __init__.py  cli.py  config.py  device_utils.py  enhanced_cli.py  inference.py  langchain_brain.py  llamaindex_rag.py  logger.py  memory.py  nlp_analyzer.py
docs/: ARCHITECTURE_REVIEW.md  CONFIGURATION.md  CONVERSATION_FLOW_FIX.md  CONVERSATION_SUMMARIZATION_IMPLEMENTATION.md  EMOTIONAL_ADAPTATION.md  EMOTIONAL_CONTEXT_IMPROVEMENTS.md  ENHANCED_LOGGING.md  ENHANCED_PROMPT_INTEGRATION.md  EXTENDED_HISTORY_IMPLEMENTATION.md  FLOW_DIAGRAM.md  IMPLEMENTATION_PLAN.md  INDEX.md  LATEST_VALIDATION.md  LOGGING_FIX.md  NLP_FEATURES.md  NLP_METADATA_VERIFICATION.md  OLLAMA_GUIDE.md  PHASE1_COMPLETE.md  PHASE_2_COMPLETION_SUMMARY.md  PROMPT_TEMPLATES.md  PROMPT_TEMPLATES_IMPLEMENTATION.md  QUERY_ENHANCEMENT.md  RAG_QUICKSTART.md  REMAINING_ARCHITECTURE_ITEMS.md  REVIEW_COMPLETE.md  REVIEW_SUMMARY.md  TIME_FORMATTING_IMPLEMENTATION.md  TOPIC_TRACKING_IMPLEMENTATION.md  UPDATES.md  VALIDATION_REPORT.md
example_documents/: README.md  about_ai_brain.md
scripts/: __init__.py  demo_prompts.py  inspect_metadata.py  load_documents.py  migrate_to_cosine.py
templates/: README.md  system_prompt.txt  system_prompt_creative.txt  system_prompt_professional.txt  system_prompt_technical.txt
tests/: __init__.py  test_actual_vs_logged.py  test_config.py  test_context.py  test_conversation_flow.py  test_logging.py  (+15 more)
